2003-09-10	fabian

    * Changed doIdleCode behavior to reduce CPU using of idle sessions.
    * Fixed a bug in save/restore buffer, and revert the eraseInDisplay code.
    
2003-09-10	ujwal

    * Fixed massive memory leaks.
    * Fixed "Prompt on Close" preference bug.
    * Clear Buffer is not local: clears clears everything up the current line.
    * Changed keyboard short for "Save Config" so that it does not interfere with 
      bookmarks shortcuts.

2003-09-09	ujwal

    * Fixed screen bauffer saving code in eraseInDisplay by partially 
      reverting to the old code.

2003-09-09	fabian

    * Changed the email address in website html files to stop spams.
    * Updated web site regarding to the icon issue.
    
2003-09-08	ujwal

    * Addressbook menu gets shortcuts only for main menu.
    * Release of version 0.7.7

2003-09-07	ujwal

    * Fixed printSelection where unnecessary white space was being printed.
    * Fixed setting up menus. AddressBook menu is now available under the 
      Shell->New Window and Shell->New Tab menu items.
    * Reworked line padding code in VT100Typesetter to avoid possible recursive 
      loop with layout manager.

2003-09-07	fabian

    * Fixed some memory leaks. Cleaned up the alloc/dealloc code to make
      coding more consistent.
      
2003-09-06	fabian
    
    * Added PTYScroller to completely fix the scrolling problem.
    * Updated Japanese translation
    
2003-09-06	ujwal

    * Fixed check whether user has scrolled up in PTYSession: timerTick.

2003-09-05	fabian

    * Fixed lost scrollback buffer size UI.
    
2003-09-05	ujwal

    * Caching text selection and re-applying in VT100Screen: updateScreen.

2003-09-04	fabian

    * Added support for mid-button paste.
    
2003-09-02	fabian

    * Updated Korean and French translations.
    * Fixed laptop's enter key.
    * Fixed the lost new line attributes bug.
    * Cleaned up eraseInDisplay code
    
2003-08-30	fabian
